spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,15 @@ button:disabled {
   width: 300px;
 }
 
+.container-wrapper {
+  @media (min-width: 1024px) {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    padding-bottom: 100px;
+  }
+}
+
 .content-wrapper {
   @media (min-width: 1024px) {
     margin-left: 200px;
